log
Fri 24 Mar 2023 12:47:52 AM UTC: 
 tests:  0|6
total_score: 0/70
bd6f410
Fri 24 Mar 2023 12:51:38 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *lista = (List*) malloc (sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0e93f03
Fri 24 Mar 2023 12:57:34 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4235588
Fri 24 Mar 2023 01:05:42 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   40 |   *list->current = list->head;
      |                    ^~~~
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1206505
Fri 24 Mar 2023 01:11:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
640ed6e
Fri 24 Mar 2023 01:12:19 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a5cf6b1
Fri 24 Mar 2023 01:12:55 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
591219e
Fri 24 Mar 2023 01:16:32 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
878461d
Fri 24 Mar 2023 01:17:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
49702d1
Fri 24 Mar 2023 01:17:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1b98aba
Fri 24 Mar 2023 01:21:32 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
5c8392a
Fri 24 Mar 2023 01:24:21 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
d18100a
Fri 24 Mar 2023 01:28:01 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5d200fc
Fri 24 Mar 2023 01:28:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9b28e29
Fri 24 Mar 2023 01:30:00 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4a80b4f
Fri 24 Mar 2023 01:30:08 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a6f51e
Fri 24 Mar 2023 01:30:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c541911
Fri 24 Mar 2023 01:31:44 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
416887f
Fri 24 Mar 2023 01:31:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
75d66b4
Fri 24 Mar 2023 01:32:13 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
103bdba
Fri 24 Mar 2023 01:36:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8efb61e
Fri 24 Mar 2023 01:36:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
790b483
Fri 24 Mar 2023 01:36:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c979f36
Fri 24 Mar 2023 01:37:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
d4e9659
Fri 24 Mar 2023 01:37:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
819253e
Fri 24 Mar 2023 01:37:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
b1ef6f1
Fri 24 Mar 2023 01:39:00 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
546db1c
Fri 24 Mar 2023 01:39:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f61612f
Fri 24 Mar 2023 01:39:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7eaee83
Fri 24 Mar 2023 01:39:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c77138a
Fri 24 Mar 2023 01:40:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
8874a5a
Fri 24 Mar 2023 01:42:33 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
17be127
Fri 24 Mar 2023 01:42:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f25db34
Fri 24 Mar 2023 01:43:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a1dd8e5
Fri 24 Mar 2023 01:45:03 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
877e3ed
Fri 24 Mar 2023 01:45:32 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
86ea9f1
Fri 24 Mar 2023 01:46:53 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
Compilation failed
e8f46a8
Fri 24 Mar 2023 01:47:02 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
30ee35e
Fri 24 Mar 2023 01:52:00 AM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
a4c3e76
Fri 24 Mar 2023 01:53:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f65b76f
Fri 24 Mar 2023 01:53:26 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
47fbba0
Fri 24 Mar 2023 01:56:03 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
b0ac516
Fri 24 Mar 2023 01:58:48 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
bca0acb
Fri 24 Mar 2023 02:55:48 AM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|1
total_score: 55/70
bb26772
Fri 24 Mar 2023 03:10:50 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
2e67c3c
Fri 24 Mar 2023 03:33:59 AM UTC: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|0
4dca172
Fri 24 Mar 2023 03:34:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dca0a24
Fri 24 Mar 2023 03:35:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:115:9: error: unused variable ‘data’ [-Werror=unused-variable]
  115 |   void *data = list->current->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d825276
Fri 24 Mar 2023 03:35:17 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:122:8: error: ‘nodoABorrar’ undeclared (first use in this function)
  122 |   free(nodoABorrar);
      |        ^~~~~~~~~~~
list.c:122:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
65404fc
Fri 24 Mar 2023 03:35:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
a95c714
Fri 24 Mar 2023 03:35:33 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:116:9: error: unused variable ‘nodoABorrar’ [-Werror=unused-variable]
  116 |   Node *nodoABorrar = list->current;
      |         ^~~~~~~~~~~
list.c:115:9: error: unused variable ‘data’ [-Werror=unused-variable]
  115 |   void *data = list->current->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d0b0892
Fri 24 Mar 2023 03:35:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:116:9: error: unused variable ‘nodoABorrar’ [-Werror=unused-variable]
  116 |   Node *nodoABorrar = list->current;
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2e8c27b
